# dieklingel-core

./: .clang-format  .clang-tidy  .env  .gitignore  .markdownlint.json  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  analysis_options.yaml  build-deb.sh  config.yaml  core.d.ts  core.ini  core.js  core.pro  core.yaml  dieklingel-core_amd64.txt  dieklingel_1.0-1_config.deb  makefile  pubspec.yaml  push-notification.sh  taskfile
.github/: app-ci.yaml
.github/workflows/: app-buildx.yaml  app-ci.yaml  check-version-number.yaml  create-tag.yaml
apps/core/: pubspec.yaml
apps/core/lib/: main.dart
apps/core/web/: index.html
apps/exec/: pubspec.yaml
apps/exec/lib/: snapshot_command.dart
core/: go.mod  go.sum  main.go  pubspec.yaml
core/core/: action.go  config.go  device.go  request.go  response.go
core/handlers/: action.go  camera.go  device.go  registrar.go  rtc.go  sign.go
core/internal/action/: action.go
core/internal/config/: config.go
core/internal/handler/: registrar.go
core/internal/models/: action.go  response.go  sensor.go
core/internal/proxy/: proxy.go
core/internal/sensor/: sensor.go
core/models/: config.go  device.go  request.go
core/server/: server.go
deb/arm64/DEBIAN/: control
docs/: DUP.md
etc/dieklingel/: commands.cmd  config.ini  devices.json  users.json
etc/dieklingel-gui/: config.json
etc/dieklingel-gui/interface/: dup.js  index.css  index.html  index.js  x-page.js  x-view.js
etc/dieklingel/html/: boot.html  engine.css  engine.html  engine.js  start.gui  update.html
etc/dieklingel/scripts/: on-call-end.sh  on-call-start.sh  on-light-on.sh  on-ring.sh  on-unlock.sh  pulse-aec
etc/systemd/system/: dieklingel-gui.service  dieklingel.service
home/: core.yaml
home/files/: schoch.rfwtxt  sign.rfwtxt
home/scripts/: push-notification.py
kiosk/: pubspec.yaml
kiosk/lib/: main.dart
kiosk/lib/hive/: hive_device_adapter.dart
kiosk/lib/models/: device.dart
kiosk/lib/repositories/: ice_server_repository.dart
kiosk/lib/services/: device_service.dart  rtc_service.dart  sign_service.dart
kiosk/lib/utils/: rtc_client_wrapper.dart
lib/: main.dart
lib/blocs/: app_view_bloc.dart  passcode_view_bloc.dart  sign_list_view_bloc.dart
lib/blueprint/: file_f.dart
lib/components/: bell_sign.dart
lib/controllers/: base_controller.dart  device_controller.dart  rest_controller.dart
lib/extensions/: yaml_map.dart
lib/googletest/: CMakeLists.txt
lib/handlers/: handler.dart  mqtt_handler.dart  rtc_handler.dart  runner.dart
lib/models/: action.dart  device.dart  event.dart  ice_server.dart  sign.dart  trigger.dart  viewport_clip.dart
lib/repositories/: action_repository.dart  app_repository.dart  base_repository.dart  database_repository.dart  device_repository.dart  file_base_repository.dart  ice_server_repository.dart  sign_repository.dart  yaml_file_base_repository.dart
lib/services/: action_service.dart  authentication_service.dart  camera_service.dart  device_service.dart  display_service.dart  event_service.dart  io_service.dart  passcode_service.dart  register_service.dart  rtc_service.dart  sign_service.dart
lib/signaling/: signaling_message.dart
lib/states/: sign_list_state.dart
lib/ui/blocs/: app_view_bloc.dart  passcode_view_bloc.dart  (+1 more)
lib/utils/: logger.dart  media_ressource.dart
lib/views/: app_view.dart  home_view.dart  off_time_view.dart  sign_list_view.dart
libraries/mqtt/: pubspec.yaml
libraries/rtc/: pubspec.yaml
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
modules/: README.md
modules/pulse-aec/: pulse-aec.cpp
plantuml/: classes.puml
qml/: main.qml
qml/components/: CButton.qml  CIcon.qml
qml/signs/: Sign.qml
qml/views/: Fotobox.qml  Light.qml  LightButton.qml  Passcode.qml
resources/: CMakeLists.txt  README.md  core.js
resources/qml/: main.qml
scripts/: prepare  runner
service/: go.mod  go.sum  main.go
service/app/: CMakeLists.txt  core.ini.in  core.js.in  dieklingel-core.service.in
service/controllers/: action_controller.go  device_controller.go
service/core/: config.go  request.go  response.go
service/handlers/: camera.go  device.go  registrar.go  rtc.go  sign.go
service/models/: action.go  device.go  sign.go
service/repositories/: device_repository.go
service/server/: server.go
snap/: snapcraft.yaml
snap/gui/: dieklingel-core.apn.desktop  dieklingel-core.gui.desktop  dieklingel-core.rtc.desktop  dieklingel.core.desktop
src/: backend.cpp  backend.h  cryptonia.cpp  cryptonia.h  customlinphone.cpp  customlinphone.h  customwebsocketserver.cpp  customwebsocketserver.h  dieklingel.h  dieklingel.pro  dieklingelcontext.h  dupnotification.cpp  dupnotification.h  dupserver.cpp  dupserver.h  ffmpegstream.cpp  ffmpegstream.h  io.cpp  io.h  main.cpp  sipclient.cpp  sipclient.cpp.backup  sipclient.cpp.backup_experimental  sipclient.cpp.backup_experimental_2  sipclient.h  sipuri.cpp  sipuri.h  socket.cpp  socket.h  system.cpp  system.h  toolbox.cpp  toolbox.h
src/app/: App.cpp  App.hpp  CMakeLists.txt  Capturer.cpp  Capturer.hpp  Constants.hpp  CoreConfig.cpp  CoreConfig.hpp  InactivityDetector.cpp  InactivityDetector.hpp  Mqtt.cpp  Mqtt.hpp  main.cpp
src/app/audio/: Audio.cpp  Audio.hpp
src/app/camera/: Camera.cpp  Camera.hpp  Capturer.cpp  Capturer.hpp
src/app/gpio/: Gpio.cpp  Gpio.hpp  Input.cpp  Input.hpp  Output.cpp  Output.hpp
src/app/kiosk/: InactivityDetector.cpp  InactivityDetector.hpp  Kiosk.cpp  Kiosk.hpp
src/app/mqtt/: Mqtt.cpp  Mqtt.hpp
src/app/setup/: Configuration.hpp  Setup.cpp  Setup.hpp  SetupTest.cpp
src/app/softphone/: Softphone.cpp  Softphone.hpp
src/app/video/: Camera.cpp  Camera.hpp  REAME.md  SplitterCamera.cpp  SplitterCamera.hpp  SplitterSink.cpp  SplitterSink.hpp  SplitterSource.cpp  SplitterSource.hpp
src/app/web/: WebServer.cpp  WebServer.hpp  WebServerTest.cpp
src/listeners/: CoreCallback.cpp  CoreCallback.hpp
test/: widget_test.dart
test/models/: action_test.dart  ice_server_test.dart  sign_test.dart
web/: manifest.json
(+52 files in other folders)
